# collapse

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  collapse.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  docker-publish.yml  mirror-codeberg.yml  test_and_build.yml  tests.yml
app/: __init__.py  main.py
app/core/: config.py
app/models/: job.py
app/schemas/: __init__.py  bulk_delete_completed_response.py  delete_response.py  file_jobs.py  job_status_response.py  upload_accepted_response.py
app/services/: compression.py  compression_queue.py  storage.py
app/state/: __init__.py  in_memory_registry.py  registry.py
apps/aio/: Cargo.toml  Dockerfile
apps/api/: Cargo.toml  Dockerfile
apps/cli/: Cargo.toml
apps/cloud/: Cargo.toml  Dockerfile
apps/cloud/src/: config.rs  main.rs  models.rs  queue.rs  registry.rs  storage.rs
apps/core/: Cargo.toml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.js
apps/web/: Dockerfile  package-lock.json
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/app/: container.py  main.py
backend/docs/: ARCHITECTURE.md  CONVENTIONS.md  LLM_CONTEXT.md
backend/tests/: test_api.py  test_compression_strategies.py  test_models.py  test_registry.py
docs/: API.md  api.md  architecture.md  deployment.md  development.md
frontend/: index.html
frontend/src/: style.css
tests/: conftest.py  test_api.py  test_compression_strategies.py  test_main_config.py  test_models.py  test_registry.py  test_storage_service.py
(+50 files in other folders)
