[project]
name = "collapse"
version = "0.1.0"
description = "FastAPI service for file compression."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "py7zr>=0.22.0,<1.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.scripts]
collapse = "app.main:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
