[package]
name = "collapse-cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
collapse-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }
